// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperSelect is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2 emotion-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props compressed is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed testClass1 testClass2 emotion-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props custom display is propagated to dropdown 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button"
            data-test-subj="superSelect"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-bottom"
      data-popover-panel="true"
      role="dialog"
      style="top: 8px; left: 0px; will-change: transform, opacity; z-index: 2000;"
    >
      <div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div>
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                id="1"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Custom Display #1
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                id="2"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Custom Display #2
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiSuperSelect props fullWidth is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--fullWidth testClass1 testClass2 emotion-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props is rendered with a prepend and append 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout euiFormControlLayout--group"
      >
        <label
          class="euiFormLabel euiFormControlLayout__prepend"
        >
          prepend
        </label>
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--inGroup testClass1 testClass2 emotion-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
        <label
          class="euiFormLabel euiFormControlLayout__append"
        >
          append
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props more props are propogated to each option 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="1"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button"
            data-test-subj="superSelect"
            type="button"
          >
            Option #1
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-bottom"
      data-popover-panel="true"
      role="dialog"
      style="top: 8px; left: 0px; will-change: transform, opacity; z-index: 2000;"
    >
      <div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div>
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-activedescendant="1"
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="true"
                class="euiContextMenuItem euiSuperSelect__item euiContextMenuItem-isDisabled"
                disabled=""
                id="1"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="check"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #1
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                data-test-subj="option two"
                id="2"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #2
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiSuperSelect props options are rendered when select is open 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button"
            data-test-subj="superSelect"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-bottom"
      data-popover-panel="true"
      role="dialog"
      style="top: 8px; left: 0px; will-change: transform, opacity; z-index: 2000;"
    >
      <div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div>
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                id="1"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #1
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                id="2"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #2
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiSuperSelect props renders popoverProps on the underlying EuiPopover 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect goes-on-outermost-wrapper emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="2"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button"
            data-test-subj="superSelect"
            type="button"
          >
            Option #2
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPopover__panel goes-on-popover-panel emotion-euiPanel-grow-m-plain-euiPopover__panel-bottom"
      data-popover-panel="true"
      role="dialog"
      style="top: 8px; left: 0px; will-change: transform, opacity; z-index: 2000;"
    >
      <div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div>
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-activedescendant="2"
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item"
                id="1"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #1
                  </span>
                </span>
              </button>
              <button
                aria-selected="true"
                class="euiContextMenuItem euiSuperSelect__item"
                id="2"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__itemLayout"
                >
                  <span
                    class="euiContextMenu__icon"
                    color="inherit"
                    data-euiicon-type="check"
                  />
                  <span
                    class="euiContextMenuItem__text"
                  >
                    Option #2
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiSuperSelect props select component is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props valueSelected is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="2"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons"
            type="button"
          >
            Option #2
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
